Fix the height of the mana bar on small devices. Disable pagination for now.

--- a/public/less/_vars.less
+++ b/public/less/_vars.less
@@ -7,7 +7,7 @@
 
 // App Sizes
 @sidebar-width: 18rem;  
-@mana-curve-height: 10rem;
+@mana-curve-height: 8rem;
 
 // Colors
 @bananna-mania: #FFE8B8;
