--- a/public/less/mana-curve/_curve.less
+++ b/public/less/mana-curve/_curve.less
@@ -3,7 +3,7 @@
 	bottom: 0;
 	left: 0;
 	height: @mana-curve-height;
-	padding: 1rem;
+	padding: .5rem 1rem;
 	z-index: 3;
 	background-color: #333;
 	color: white;
@@ -20,7 +20,7 @@
 }
 
 .mana-bar__bar {
-	height: 5rem;
+	height: 3rem;
 	border: 1px solid gray;
 	margin: 0 auto .5rem;
 	max-width: 1rem;
